--- a/E/Epic/Vail_Resort_Template/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #5c6f7c;
+        color: #CC0000;
         background-color: #fff;
       }
       .frame {
@@ -91,7 +91,7 @@
           font-size: 11px;
           line-height: 20px;
           letter-spacing: 1px;
-          /* border-radius: 15px; */
+          border-radius: 15px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -133,7 +133,7 @@
             // ref: 'ref.png'
             saleImage: 'images/300x250_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#5c6f7c^#3d4952',
+            ctaBtnColor: '#4d4d4d^#000000',
           },
           beforeLoad: function(data){
             data.map(function(content){
