--- a/E/Epic/Vail_Resort_Template/ads/300x250/MtSunapee/300x250_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x250/MtSunapee/300x250_MtSunapee.htm
@@ -92,7 +92,7 @@
           line-height: 20px;
           letter-spacing: 1px;
           /* border-radius: 15px; */
-          color: #fff;">
+          color: #000;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -133,7 +133,7 @@
             // ref: 'ref.png'
             saleImage: 'images/300x250_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#5c6f7c^#3d4952',
+            ctaBtnColor: '#fdb933^#f9c765',
           },
           beforeLoad: function(data){
             data.map(function(content){
