--- a/E/Epic/Vail_Resort_Template/ads/970x250/Hunter/970x250_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/Hunter/970x250_Hunter.htm
@@ -78,14 +78,15 @@
       </div>
       <div id="cta" class="text RobotoSlabRegular"
         data-text="ctaText"
-        data-style="padding:0 15px 0px;"
+        data-style="padding:0 20px 0px;"
         style="top: 193px;
           left: 623px;
-          width: 156px;
+          min-width: 156px;
+          max-width: 190px;
           height: 40px;
           font-size: 16px;
           line-height: 22px;
-          letter-spacing: 3.2px;
+          letter-spacing: 0.2em;
           border-radius: 20px;
           color: #fff;">
       </div>
@@ -138,7 +139,7 @@
                 content.styleProperties = "{'#saleImage': {css:{display:'block'}}}";
                 var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
                 for (var i = 0; i < frameText.length; i++){
-                 frameText[i].style.width = '220px';
+                 frameText[i].style.width = '210px';
                 }
               }
             });
