--- a/E/Epic/Vail_Resort_Template/ads/970x250/ParkCity/970x250_ParkCity.htm
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/ParkCity/970x250_ParkCity.htm
@@ -48,7 +48,7 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left JosefinSansBold"
         data-text="frameText1"
-        style="top: 50px;
+        style="top: 64px;
           left: 623px;
           width: 320px;
           height: 130px;
@@ -58,7 +58,7 @@
       </div>
       <div id="frameText2" class="text-left JosefinSansBold"
         data-text="frameText2"
-        style="top: 50px;
+        style="top: 64px;
           left: 623px;
           width: 320px;
           height: 130px;
@@ -68,7 +68,7 @@
       </div>
       <div id="frameText3" class="text-left JosefinSansBold"
         data-text="frameText3"
-        style="top: 50px;
+        style="top: 64px;
           left: 623px;
           width: 320px;
           height: 130px;
@@ -78,14 +78,15 @@
       </div>
       <div id="cta" class="text JosefinSansBold"
         data-text="ctaText"
-        data-style="padding:0 8px 0px;"
+        data-style="padding:0 20px 1px;"
         style="top: 193px;
           left: 623px;
-          width: 156px;
+          min-width: 156px;
+          max-width: 190px;
           height: 40px;
           font-size: 16px;
           line-height: 22px;
-          letter-spacing: 3.2px;
+          letter-spacing: 0.2em;
           border-radius: 20px;
           color: #fff;">
       </div>
@@ -138,7 +139,7 @@
                 content.styleProperties = "{'#saleImage': {css:{display:'block'}}}";
                 var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
                 for (var i = 0; i < frameText.length; i++){
-                 frameText[i].style.width = '220px';
+                 frameText[i].style.width = '210px';
                 }
               }
             });
