--- a/E/Epic/Vail_Resort_Template/ads/970x250/Vail/970x250_Vail.htm
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/Vail/970x250_Vail.htm
@@ -88,14 +88,15 @@
       </div>
       <div id="cta" class="text GillSansNovaBook"
         data-text="ctaText"
-        data-style="padding:0 8px 2px;"
+        data-style="padding:0 20px 1px;"
         style="top: 193px;
           left: 623px;
-          width: 156px;
+          min-width: 156px;
+          max-width: 190px;
           height: 40px;
           font-size: 16px;
           line-height: 22px;
-          letter-spacing: 3.2px;
+          letter-spacing: 0.2em;
           border-radius: 20px;
           color: #fff;">
       </div>
@@ -150,7 +151,7 @@
                 content.styleProperties = "{'#saleImage': {css:{display:'block'}}}";
                 var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
                 for (var i = 0; i < frameText.length; i++){
-                 frameText[i].style.width = '220px';
+                 frameText[i].style.width = '210px';
                 }
               }
             });
