--- a/E/Epic/Vail_Resort_Template/ads/300x250/StevensPass/300x250_StevensPass.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x250/StevensPass/300x250_StevensPass.htm
@@ -78,12 +78,12 @@
       </div>
       <div id="cta" class="text DINCondensedRegular"
         data-text="ctaText"
-        data-style="padding:0 10px 1px;"
+        data-style="padding:1px 10px 0px;"
         style="top: 194px;
           left: 201px;
           width: 87px;
           height: 28px;
-          font-size: 11px;
+          font-size: 15px;
           line-height: 20px;
           letter-spacing: 1px;
           /* border-radius: 15px; */
@@ -135,7 +135,12 @@
               content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
               layout = content.layout.toLowerCase();
               if(layout == 'multipleimages') {
-                content.styleProperties = "{'#cta': {x:-191, y:21}, '#saleImage': {css:{display:'block'}}}";
+                content.styleProperties = "{'#cta': {y:21}, '#saleImage': {css:{display:'block'}}}";
+                var cta = document.querySelector("#cta");
+                cta.style.left = "10px";
+                cta.style.width = "auto";
+                cta.style.minWidth = "90px";
+                cta.style.maxWidth = "140px";
                 var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
                 for (var i = 0; i < frameText.length; i++){
                  frameText[i].style.height = '38px';
