--- a/E/Epic/Vail_Resort_Template/ads/320x50/Vail/320x50_Vail.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/Vail/320x50_Vail.htm
@@ -147,7 +147,13 @@
               content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
               layout = content.layout.toLowerCase();
               if(layout == 'multipleimages') {
-                content.styleProperties = "{'#frameText': {x:-4, y:-3}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {x:-90, y:13}, '#saleImage': {css:{display:'block'}}}";
+                content.styleProperties = "{'#frameText': {x:-4, y:-3}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:13}, '#saleImage': {css:{display:'block'}}}";
+                var cta = document.querySelector("#cta");
+                cta.style.left = "166px";
+                cta.style.width = "auto";
+                cta.style.minWidth = "55px";
+                cta.style.maxWidth = "90px";
+                cta.style.height = "16px";
                 var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
                 for (var i = 0; i < frameText.length; i++){
                  frameText[i].style.width = '95px';
