--- a/E/Epic/Vail_Resort_Template/ads/320x50/MtSnow/320x50_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/MtSnow/320x50_MtSnow.htm
@@ -78,12 +78,12 @@
       </div>
       <div id="cta" class="text SabonLTProBold"
         data-text="ctaText"
-        data-style="padding:0 6px 0px;"
+        data-style="padding:1px 6px 0px;"
         style="top: 17px;
           left: 256px;
           width: 55px;
           height: 18px;
-          font-size: 6px;
+          font-size: 7.5px;
           line-height: 10px;
           letter-spacing: 0.5px;
           border-radius: 12px;
