--- a/E/Epic/Vail_Resort_Template/ads/300x600/Keystone/300x600_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/Keystone/300x600_Keystone.htm
@@ -81,7 +81,7 @@
       </div>
       <div id="cta" class="text EagleBook"
         data-text="ctaText"
-        data-style="padding:0 12px 0px;"
+        data-style="padding:4px 12px 0px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
