--- a/E/Epic/Vail_Resort_Template/ads/300x600/StevensPass/300x600_StevensPass.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/StevensPass/300x600_StevensPass.htm
@@ -81,12 +81,12 @@
       </div>
       <div id="cta" class="text DINCondensedRegular"
         data-text="ctaText"
-        data-style="padding:0 12px 0px;"
+        data-style="padding:2px 12px 0px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
           height: 34px;
-          font-size: 14px;
+          font-size: 17px;
           line-height: 20px;
           letter-spacing: 2.2px;
           /*border-radius: 15px;*/
