--- a/E/Epic/Vail_Resort_Template/ads/300x600/Northstar/300x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/Northstar/300x600_Northstar.htm
@@ -81,7 +81,7 @@
       </div>
       <div id="cta" class="text NeutraDisplayBold"
         data-text="ctaText"
-        data-style="padding:0 12px 0px;"
+        data-style="padding:2px 12px 0px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
