--- a/E/Epic/Vail_Resort_Template/ads/160x600/StevensPass/160x600_StevensPass.htm
+++ b/E/Epic/Vail_Resort_Template/ads/160x600/StevensPass/160x600_StevensPass.htm
@@ -81,12 +81,12 @@
       </div>
       <div id="cta" class="text DINCondensedRegular"
         data-text="ctaText"
-        data-style="text-align:center;padding:0 8px 0px;"
+        data-style="text-align:center;padding:1px 8px 0px;"
         style="top: 545px;
           left: 32px;
           width: 96px;
           height: 28px;
-          font-size: 12px;
+          font-size: 15px;
           line-height: 20px;
           letter-spacing: 1.1px;
           /*border-radius: 15px;*/
