--- a/E/Epic/Vail_Resort_Template/ads/160x600/Breckenridge/160x600_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template/ads/160x600/Breckenridge/160x600_Breckenridge.htm
@@ -86,7 +86,7 @@
       </div>
       <div id="cta" class="text PoppinsBold"
         data-text="ctaText"
-        data-style="text-align:center;padding:0 8px 1px;"
+        data-style="text-align:center;padding:1px 8px 0px;"
         style="top: 545px;
           left: 32px;
           width: 96px;
