--- a/E/Epic/Vail_Resort_Template/ads/160x600/Okemo/160x600_Okemo.htm
+++ b/E/Epic/Vail_Resort_Template/ads/160x600/Okemo/160x600_Okemo.htm
@@ -91,7 +91,7 @@
       </div>
       <div id="cta" class="text InterSemiBold"
         data-text="ctaText"
-        data-style="text-align:center;padding:0 8px 0px;"
+        data-style="text-align:center;padding:1px 8px 0px;"
         style="top: 545px;
           left: 32px;
           width: 96px;
