--- a/E/Epic/Vail_Resort_Template/ads/160x600/Stowe/160x600_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template/ads/160x600/Stowe/160x600_Stowe.htm
@@ -81,7 +81,7 @@
       </div>
       <div id="cta" class="text AvenirLTStdBook"
         data-text="ctaText"
-        data-style="text-align:center;padding:0 8px 0px;"
+        data-style="text-align:center;padding:3px 8px 0px;"
         style="top: 545px;
           left: 32px;
           width: 96px;
