--- a/M/Microsoft/Microsoft_Office_BTS_Interactive_Banner/ads/300x250/z300x250.html
+++ b/M/Microsoft/Microsoft_Office_BTS_Interactive_Banner/ads/300x250/z300x250.html
@@ -23,60 +23,69 @@
           }
           return text;
         }
+        // var contentD = [
+        //   // {
+        //   //   "passthroughfield1": "['<#505050>Ace the school year with|Microsoft 365.|What’s your goal?','15.1px',16,39,'17','350', 'left']",
+        //   //   "passthroughfield2": "na",
+        //   //   "passthroughfield3": "['<#0078d4>Choose one','12px',15,7,'14','350', 'left']",
+        //   //   "product_url": "https://adobe.com/#Microsoft1",
+        //   // },
+        //   {
+        //     "passthroughfield1": "InteractiveParent",
+        //     "passthroughfield2": "['<#505050>Work in real time, together','15.2px',16,45, '17','350', 'left']",
+        //     "passthroughfield3": "['<#505050>Coauthor documents and communicate in real|time across your favorite apps, plus 1 TB of|OneDrive cloud storage','10.2px',16,70,'12','350', 'left']",
+        //     "passthroughfield4": "['<#505050>Working virtually','12px',15,7,'10','350', 'left']",
+        //     "price" : "3",
+        //     "product_url": "https://adobe.com/#Microsoft2",
+        //   },
+        //   {
+        //     "passthroughfield1": "InteractiveParent",
+        //     "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
+        //     "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
+        //     "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
+        //     "price" : "1",
+        //     "product_url": "https://adobe.com/#Microsoft3",
+        //   },
+        //   {
+        //     "passthroughfield1": "InteractiveStudent",
+        //     "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
+        //     "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
+        //     "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
+        //     "price" : "3",
+        //     "product_url": "https://adobe.com/#Microsoft3",
+        //   },
+        //   {
+        //     "passthroughfield1": "InteractiveStudent",
+        //     "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
+        //     "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
+        //     "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
+        //     "price" : "1",
+        //     "product_url": "https://adobe.com/#Microsoft3",
+        //   },
+        //   {
+        //     "passthroughfield1": "InteractiveParent",
+        //     "passthroughfield2": "['<#505050>Get a clear picture of your finances','15.2px',16,45, '17','350', 'left']",
+        //     "passthroughfield3": "['<#505050>Securely track and manage your budget|with smart templates in Excel, plus 1 TB|of OneDrive cloud storage','10.2px',16,70,'12','350', 'left']",
+        //     "passthroughfield4": "['<#505050>Saving money','12px',15,7,'14','350', 'left']",
+        //     "price" : "2",
+        //     "product_url": "https://adobe.com/#Microsoft4",
+        //   },
+        //   {
+        //     "passthroughfield1": "InteractiveStudent",
+        //     "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
+        //     "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
+        //     "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
+        //     "price" : "2",
+        //     "product_url": "https://adobe.com/#Microsoft3",
+        //   },
+        // ];
+
         var contentD = [
-          // {
-          //   "passthroughfield1": "['<#505050>Ace the school year with|Microsoft 365.|What’s your goal?','15.1px',16,39,'17','350', 'left']",
-          //   "passthroughfield2": "na",
-          //   "passthroughfield3": "['<#0078d4>Choose one','12px',15,7,'14','350', 'left']",
-          //   "product_url": "https://adobe.com/#Microsoft1",
-          // },
           {
-            "passthroughfield1": "InteractiveParent",
-            "passthroughfield2": "['<#505050>Work in real time, together','15.2px',16,45, '17','350', 'left']",
-            "passthroughfield3": "['<#505050>Coauthor documents and communicate in real|time across your favorite apps, plus 1 TB of|OneDrive cloud storage','10.2px',16,70,'12','350', 'left']",
-            "passthroughfield4": "['<#505050>Working virtually','12px',15,7,'10','350', 'left']",
-            "price" : "3",
-            "product_url": "https://adobe.com/#Microsoft2",
-          },
-          {
-            "passthroughfield1": "InteractiveParent",
-            "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
-            "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
-            "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
-            "price" : "1",
-            "product_url": "https://adobe.com/#Microsoft3",
-          },
-          {
-            "passthroughfield1": "InteractiveStudent",
-            "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
-            "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
-            "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
-            "price" : "3",
-            "product_url": "https://adobe.com/#Microsoft3",
-          },
-          {
-            "passthroughfield1": "InteractiveStudent",
-            "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
-            "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
-            "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
-            "price" : "1",
-            "product_url": "https://adobe.com/#Microsoft3",
-          },
-          {
-            "passthroughfield1": "InteractiveParent",
-            "passthroughfield2": "['<#505050>Get a clear picture of your finances','15.2px',16,45, '17','350', 'left']",
-            "passthroughfield3": "['<#505050>Securely track and manage your budget|with smart templates in Excel, plus 1 TB|of OneDrive cloud storage','10.2px',16,70,'12','350', 'left']",
-            "passthroughfield4": "['<#505050>Saving money','12px',15,7,'14','350', 'left']",
-            "price" : "2",
-            "product_url": "https://adobe.com/#Microsoft4",
-          },
-          {
-            "passthroughfield1": "InteractiveStudent",
-            "passthroughfield2": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']",
-            "passthroughfield3": "['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']",
-            "passthroughfield4": "['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']",
-            "price" : "2",
-            "product_url": "https://adobe.com/#Microsoft3",
+            "passthroughfield2": "['<#505050>Work in real time, together','15.2px',16,45, '17','350', 'left']^['<#505050>Coauthor documents and communicate in real|time across your favorite apps, plus 1 TB of|OneDrive cloud storage','10.2px',16,70,'12','350', 'left']^['<#505050>Working virtually','12px',15,7,'10','350', 'left']^InteractiveParent_WorkingVirtually",
+            "passthroughfield3": "['<#505050>Unleash your imagination','15.2px',16,45, '17','350', 'left']^['<#505050>Surprise your peers with 3D presentations|in PowerPoint, plus 1 TB of OneDrive|cloud storage','10.2px',16,70,'12','350', 'left']^['<#505050>Keeping my kids engaged','12px',15,7,'14','350', 'left']^InteractiveParent_KeepingEngaged",
+            "passthroughfield4": "['<#505050>Get a clear picture of your finances','15.2px',16,45, '17','350', 'left']^['<#505050>Securely track and manage your budget|with smart templates in Excel, plus 1 TB|of OneDrive cloud storage','10.2px',16,70,'12','350', 'left']^['<#505050>Saving money','12px',15,7,'14','350', 'left']^InteractiveParent_SavingMoney",
+            "product_url": "https://adobe.com/#Microsoft2^https://adobe.com/#Microsoft3^https://adobe.com/#Microsoft4^na",//https://adobe.com/#Microsoft1
           },
         ];
 
@@ -128,8 +137,27 @@
             content.map(function(data){
               for(var key in data) { data[key] = typeof data[key] == 'string' ? replaceMacro(data[key], data.feedData) : data[key]; }
             });
-            content = content.filter(function(data){ return content[0].layout.split('|')[0].toLowerCase() == data.feedData.passthroughfield1.toLowerCase(); });
-            if('gender' in content[0].feedData)content = content.sort(function(a, b){return a.feedData.gender - b.feedData.gender});
+            if(content[0].textField1 && content[0].textField1.indexOf('^') != -1 && content.length == 1) {
+              var defaultUrl = 'na';
+              if(content[0].url.indexOf('^') != -1 && content[0].url.split('^').length == 4) { defaultUrl = content[0].url.split('^')[3]; }
+              var newContent = [];
+              for(var i = 0; i < 3; i++) {
+                var data = {};
+                for(var j in content[0]) { data[j] = content[0][j]; }
+                var temp = data['textField'+(i+1)];
+                temp = temp.split('^');
+                data.layout += '|' + temp[3];
+                data.textField1 = temp[0];
+                data.textField2 = temp[1];
+                data.textField3 = temp[2];
+                data.url = data.url.split('^')[i];
+                data.defaultUrl = defaultUrl;
+                newContent.push(data);
+              }
+              content = newContent;
+            }
+            // content = content.filter(function(data){ return content[0].layout.split('|')[0].toLowerCase() == data.feedData.passthroughfield1.toLowerCase(); });
+            // if('gender' in content[0].feedData)content = content.sort(function(a, b){return a.feedData.gender - b.feedData.gender});
           }
         }
         window.adData = content[0], window.adClickUrl = adData.url;
@@ -138,6 +166,8 @@
           var url = {}
           url.data = content[i].feedData;
           url.path = content[i].url;
+          url.defaultPath = content[i].defaultUrl;
+          url.defaultLabel = content[i].layout + '|' + 'DefaultClick';
           url.label = content[i].layout + '|' + eval(content[i].textField3)[0].split('>')[1];
           urls.push(url);
           for(var j = 1; j <= 5; j++) {
