--- a/E/Epic/Vail_Resort_Template/ads/320x50/Heavenly/320x50_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/Heavenly/320x50_Heavenly.htm
@@ -53,7 +53,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left DINCondensedRegular"
@@ -63,7 +63,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left DINCondensedRegular"
@@ -73,19 +73,19 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text DINCondensedRegular"
         data-text="ctaText"
-        data-style="padding:1px 6px 0px;"
+        data-style="padding:0px 6px 0px;"
         style="top: 17px;
           left: 256px;
           width: 55px;
           height: 18px;
           font-size: 10px;
           line-height: 10px;
-          letter-spacing: 0.5px;
+          letter-spacing: 0.05em;
           border-radius: 12px;
           color: #fff;">
       </div>
