--- a/E/Epic/Vail_Resort_Template/ads/160x600/Heavenly/160x600_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template/ads/160x600/Heavenly/160x600_Heavenly.htm
@@ -54,7 +54,7 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text DINCondensedRegular"
@@ -65,7 +65,7 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text DINCondensedRegular"
@@ -76,7 +76,7 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="cta" class="text DINCondensedRegular"
@@ -88,7 +88,7 @@
           height: 28px;
           font-size: 15px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           border-radius: 15px;
           color: #fff;">
       </div>
