--- a/E/Epic/Vail_Resort_Template/ads/300x250/Heavenly/300x250_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x250/Heavenly/300x250_Heavenly.htm
@@ -53,7 +53,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left DINCondensedRegular"
@@ -63,7 +63,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left DINCondensedRegular"
@@ -73,7 +73,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text DINCondensedRegular"
@@ -85,7 +85,7 @@
           height: 28px;
           font-size: 15px;
           line-height: 20px;
-          letter-spacing: 1px;
+          letter-spacing: 0.05em;
           border-radius: 15px;
           color: #fff;">
       </div>
