--- a/E/Epic/Vail_Resort_Template/ads/300x600/Heavenly/300x600_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/Heavenly/300x600_Heavenly.htm
@@ -54,7 +54,7 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text DINCondensedRegular"
@@ -65,7 +65,7 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text DINCondensedRegular"
@@ -76,7 +76,7 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text DINCondensedRegular"
@@ -88,8 +88,8 @@
           height: 34px;
           font-size: 16px;
           line-height: 20px;
-          letter-spacing: 2.2px;
-          border-radius: 15px;
+          letter-spacing: 0.05em;
+          border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
