--- a/E/Epic/Vail_Resort_Template/ads/320x50/Northstar/320x50_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/Northstar/320x50_Northstar.htm
@@ -78,7 +78,7 @@
       </div>
       <div id="cta" class="text NeutraDisplayBold"
         data-text="ctaText"
-        data-style="padding:0 6px 0px;"
+        data-style="padding:2px 6px 0px;"
         style="top: 17px;
           left: 256px;
           width: 55px;
