--- a/E/Epic/Vail_Resort_Template/ads/970x250/MtSunapee/970x250_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/MtSunapee/970x250_MtSunapee.htm
@@ -9,14 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .OpenSansCondensedBold {
-        font-family: open-sans-condensed,sans-serif;
-        font-weight: 700;
-        font-style: normal;
+      .ExoSoftExtraBoldItalic {
+        font-family: exo-soft,sans-serif;
+        font-weight: 800;
+        font-style: italic;
       }
-      .MontserratSemibold{
-        font-family: montserrat, sans-serif;
-        font-weight: 600;
+      .JosefinSansBold{
+        font-family: josefin-sans,sans-serif;
+        font-weight: 700;
         font-style: normal;
       }
     </style>
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #5c6f7c;
+        color: #00bed6;
         background-color: #fff;
       }
       .frame {
@@ -51,37 +51,40 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratSemibold"
+      <div id="frameText1" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText1"
-        style="top: 50px;
+        style="top: 65px;
           left: 623px;
           width: 320px;
-          height: 130px;
+          height: 115px;
           font-size: 30px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.05em;
+          text-shadow: 1px 1px 0px #000;
           line-height: 1.13;">
       </div>
-      <div id="frameText2" class="text-left MontserratSemibold"
+      <div id="frameText2" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText2"
-        style="top: 50px;
+        style="top: 65px;
           left: 623px;
           width: 320px;
-          height: 130px;
+          height: 115px;
           font-size: 30px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.05em;
+          text-shadow: 1px 1px 0px #000;
           line-height: 1.13;">
       </div>
-      <div id="frameText3" class="text-left MontserratSemibold"
+      <div id="frameText3" class="text-left ExoSoftExtraBoldItalic"
         data-text="frameText3"
-        style="top: 50px;
+        style="top: 65px;
           left: 623px;
           width: 320px;
-          height: 130px;
+          height: 115px;
           font-size: 30px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.05em;
+          text-shadow: 1px 1px 0px #000;
           line-height: 1.13;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text JosefinSansBold"
         data-text="ctaText"
         data-style="padding:0 20px 0px;"
         style="top: 193px;
@@ -89,18 +92,17 @@
           min-width: 156px;
           max-width: 190px;
           height: 40px;
-          font-size: 20px;
+          font-size: 18px;
           line-height: 22px;
-          letter-spacing: 0.2em;
+          letter-spacing: 0.1em;
           /*border-radius: 20px;*/
           color: #000;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
-      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
-      <!-- <div class="ScotchDisplayFat">ScotchDisplayFat</div> -->
+      <div class="ExoSoftExtraBoldItalic">ExoSoftExtraBoldItalic</div>
+      <div class="JosefinSansBold">JosefinSansBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
