--- a/E/Epic/Vail_Resort_Template/ads/300x600/MtSunapee/300x600_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/MtSunapee/300x600_MtSunapee.htm
@@ -9,14 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .OpenSansCondensedBold {
-        font-family: open-sans-condensed,sans-serif;
-        font-weight: 700;
-        font-style: normal;
+      .ExoSoftExtraBoldItalic {
+        font-family: exo-soft,sans-serif;
+        font-weight: 800;
+        font-style: italic;
       }
-      .MontserratSemibold{
-        font-family: montserrat, sans-serif;
-        font-weight: 600;
+      .JosefinSansBold{
+        font-family: josefin-sans,sans-serif;
+        font-weight: 700;
         font-style: normal;
       }
     </style>
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #5c6f7c;
+        color: #00bed6;
         background-color: #fff;
       }
       .frame {
@@ -51,7 +51,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text MontserratSemibold"
+      <div id="frameText1" class="text ExoSoftExtraBoldItalic"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 457px;
@@ -59,10 +59,11 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
+          text-shadow: 1px 1px 0px #000;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text MontserratSemibold"
+      <div id="frameText2" class="text ExoSoftExtraBoldItalic"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 457px;
@@ -70,10 +71,11 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
+          text-shadow: 1px 1px 0px #000;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text MontserratSemibold"
+      <div id="frameText3" class="text ExoSoftExtraBoldItalic"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 457px;
@@ -81,28 +83,28 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
+          text-shadow: 1px 1px 0px #000;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text JosefinSansBold"
         data-text="ctaText"
         data-style="padding:0 12px 0px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
           height: 34px;
-          font-size: 16px;
+          font-size: 13px;
           line-height: 20px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.1em;
           /*border-radius: 15px;*/
           color: #000;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
-      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
-      <!-- <div class="ScotchDisplayFat">ScotchDisplayFat</div> -->
+      <div class="ExoSoftExtraBoldItalic">ExoSoftExtraBoldItalic</div>
+      <div class="JosefinSansBold">JosefinSansBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
