--- a/M/Microsoft/Microsoft_Office_BTS_Standard_Animated_Banner/ads/300x600/3DPPT/M365_FY21Q1_BTS_USA_300x600_BAN_3DPPT_English_NA_NA_ANI_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_BTS_Standard_Animated_Banner/ads/300x600/3DPPT/M365_FY21Q1_BTS_USA_300x600_BAN_3DPPT_English_NA_NA_ANI_BN_NA_1.htm
@@ -84,11 +84,14 @@ function handleComplete(evt,comp) {
 			var ctaWidth = layers.txtCta.children[0].children[0].getBounds().width + 45;
 			layers.txtCta.regX = 0;
 			layers.txtCta.children[0].x = 0;
-			layers.txtCta.children[0].y += 1;
+			// layers.txtCta.children[0].y += 1;
 			layers.cta.regX = 0;
 			layers.cta.regY = 0;
 			layers.cta.scaleX = 1;
 			layers.cta.scaleY = 1;
+			layers.cta.arrow.scaleX = 0.9;
+			layers.cta.arrow.scaleY = 0.9;
+			layers.cta.arrow.regY = 11;
 			layers.cta.arrow.arrow_1.x = 0;
 			layers.cta.arrow.arrow.x = 0;
 			layers.cta.arrow.arrow_1.regX = 0;
@@ -115,7 +118,7 @@ function handleComplete(evt,comp) {
 		var bannerData = parentWindow.getBannerData();
 		bannerData.headline1 = eval(bannerData.textField1);
 		bannerData.headline2 = eval(bannerData.textField2);
-		bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"15px",-3,0,"50","300", "center"] : '';
+		bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,"14px",0,0,"50","300", "center"] : '';
 		animation_container.addEventListener("click", function(){
 			parentWindow.amo.onDynAdClick(parentWindow.adData.feedData, "CLICK", parentWindow.adClickUrl, bannerData.layout + '|' + bannerData.ctaText);
 			if(bannerData.clickTracker) {
@@ -136,7 +139,7 @@ function handleComplete(evt,comp) {
 			});
 		}
         exportRoot.initBanner(bannerData)
-        // ctaAlignment('right')
+        ctaAlignment('right')
         exportRoot.runBanner()
     })
 	initReady=true
