--- a/M/Microsoft/Microsoft_Office_BTS_Standard_Animated_Banner/ads/300x600/Editor/M365_FY21Q1_BTS_USA_300x600_BAN_Editor_English_NA_NA_ANI_BN_NA_1.htm
+++ b/M/Microsoft/Microsoft_Office_BTS_Standard_Animated_Banner/ads/300x600/Editor/M365_FY21Q1_BTS_USA_300x600_BAN_Editor_English_NA_NA_ANI_BN_NA_1.htm
@@ -75,7 +75,7 @@ function handleComplete(evt,comp) {
 	 if (!initReady) {
         startBanner()
     }
-    TweenMax.delayedCall(0.2,function(){
+		TweenMax.delayedCall(0.2,function(){
         var ctaAlignment = function(position){
 			position = position ? position : 'left';
 			var layers = exportRoot.mainMC;
@@ -84,11 +84,14 @@ function handleComplete(evt,comp) {
 			var ctaWidth = layers.txtCta.children[0].children[0].getBounds().width + 45;
 			layers.txtCta.regX = 0;
 			layers.txtCta.children[0].x = 0;
-			layers.txtCta.children[0].y += 1;
+			layers.txtCta.children[0].y -= 2.5;
 			layers.cta.regX = 0;
 			layers.cta.regY = 0;
 			layers.cta.scaleX = 1;
 			layers.cta.scaleY = 1;
+			layers.cta.arrow.scaleX = 0.9;
+			layers.cta.arrow.scaleY = 0.9;
+			layers.cta.arrow.regY = 12;
 			layers.cta.arrow.arrow_1.x = 0;
 			layers.cta.arrow.arrow.x = 0;
 			layers.cta.arrow.arrow_1.regX = 0;
@@ -137,7 +140,7 @@ function handleComplete(evt,comp) {
 			});
 		}
         exportRoot.initBanner(bannerData)
-        // ctaAlignment('right')
+        ctaAlignment('right')
         exportRoot.runBanner()
     })
 	initReady=true
