--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/160x600/160x600_frame2.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/160x600/160x600_frame2.html
@@ -120,7 +120,7 @@ amo.registerAttribute("frameText21", "TEXT", "<div style='top: 65px;left: 12px;f
 amo.registerAttribute("frameText22", "TEXT", "<div style='top:143px;left:11px;'><div class='bulletedText'>Unlimited data</div><div class='bulletedText'>$50 Amazon.com gift card<div class='AlticeRegular' style='font-size: 10px;line-height:1;margin-top: 2px;'>Restrictions apply.</div></div></div>");
 amo.registerAttribute("frameText23", "TEXT", "<div style='top: 211px;left: 11px;'><div class='bulletedText'>Free Installation<br>for Students</div><div class='bulletedText'>Free WIFI extender</div></div>");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 65px;left: 13px;font-size: 20px;line-height: 1.05;'>Internet<br>as low as</div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top: 108px;left: 14px;width: 160px;line-height: 1;'><font style='font-size: 63px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 2px;font-size: 10.5px;display: inline-block;vertical-align: 37px;'>/mo.</font><div class='AlticeRegular' style='margin: 3px 0 0 -1px;font-size: 10.3px;line-height: 1.1;'>w/Auto Pay &amp; Paperless Bill<br>Plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top: 108px;left: 14px;width: 160px;line-height: 1;'><font style='font-size: 63px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 2px;font-size: 10.5px;display: inline-block;vertical-align: 37px;'>/mo.</font><div class='AlticeRegular' style='margin: 3px 0 0 -1px;font-size: 10.3px;line-height: 1.1;'>w/Auto Pay & Paperless Bill<br>Plus taxes, fees & charges</div></div>");
 amo.registerAttribute("frameText33","TEXT","&nbsp;");
 </script>
 <!-- End of overrode asset attributes values -->
@@ -169,9 +169,8 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
       <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div>
       <div id="frameImage12" class="asset adSizeContainer" data-image="frameImage12"></div>
-      <div id="frameText1" class="text AlticeBold"
+      <div id="frameText1" class="text-left AlticeBold"
         data-text="frameText1"
-        data-style="text-align:center;"
         style="top: 145px;
           left: 25px;
           width: 120px;
