--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x50/300x50_frame2.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x50/300x50_frame2.html
@@ -110,7 +110,7 @@ amo.registerAttribute("frameText21","TEXT","<div style='top: 9px;left: 10px;font
 amo.registerAttribute("frameText22","TEXT","&nbsp;");
 amo.registerAttribute("frameText23","TEXT","&nbsp;");
 amo.registerAttribute("frameText31", "TEXT", "<div style='top:0px;left:10px;font-size:16.8px;'>Internet as low as</div>");
-amo.registerAttribute("frameText32", "TEXT", "<div style='top: 20px;left: 8px;width: 220px;line-height: 1;'><font style='font-size: 31px;' class='coloredText'>$20</font><font style='margin-left: 1px;font-size: 9px;display: inline-block;vertical-align: 14px;'>/mo.</font><div class='AlticeRegular' style='margin: -27px 0 0 82px;font-size: 9px;'>w/Auto Pay &amp; Paperless Bill<br>Plus taxes, fees &amp; charges</div></div>");
+amo.registerAttribute("frameText32", "TEXT", "<div style='top: 20px;left: 8px;width: 220px;line-height: 1;'><font style='font-size: 31px;' class='coloredText'>$20</font><font style='margin-left: 1px;font-size: 9px;display: inline-block;vertical-align: 14px;'>/mo.</font><div class='AlticeRegular' style='margin: -27px 0 0 82px;font-size: 9px;'>w/Auto Pay & Paperless Bill<br>Plus taxes, fees & charges</div></div>");
 amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
 </script>
 <!-- End of overrode asset attributes values -->
