--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/160x600/160x600.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/160x600/160x600.html
@@ -121,7 +121,7 @@ amo.registerAttribute("frameText22", "TEXT", "<div style='top:143px;left:11px;'>
 amo.registerAttribute("frameText23", "TEXT", "<div style='top: 211px;left: 11px;'><div class='bulletedText'>Free Installation<br>for Students</div><div class='bulletedText'>Free WIFI extender</div></div>");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 65px;left: 13px;font-size: 20px;line-height: 1.05;'>Internet<br>as low as</div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 108px;left: 14px;width: 160px;line-height: 1;'><font style='font-size: 63px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 2px;font-size: 10.5px;display: inline-block;vertical-align: 37px;'>/mo.</font><div class='AlticeRegular' style='margin: 3px 0 0 -1px;font-size: 10.3px;line-height: 1.1;'>w/Auto Pay & Paperless Bill<br>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText33","TEXT","&nbsp;");
+amo.registerAttribute("frameText33","TEXT","<div class='AlticeRegular' style='top: 220px;left: 13px;width:130px;font-size: 10px;line-height: 1.1;'>Speeds and availability<br>vary by area.</div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
