--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x250/300x250.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x250/300x250.html
@@ -130,7 +130,7 @@ amo.registerAttribute("frameText22", "TEXT", "<div style='top:87px;left:23px;'><
 amo.registerAttribute("frameText23", "TEXT", "<div style='top: 135px;left: 23px;'><div class='bulletedText'>Free Installation for Students</div><div class='bulletedText'>Free WIFI extender</div></div>");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 25px;left: 22px;font-size: 19.4px;line-height: 1.05;'>Internet<br>as low as</div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 63px;left: 18px;width: 160px;line-height: 1;'><font style='font-size: 65px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 6px;font-size: 11px;display: inline-block;vertical-align: 35px;'>/mo.</font><div class='AlticeRegular' style='margin: 3px 0 0 5px;font-size: 10px;line-height: 1.1;'>w/Auto Pay & Paperless Bill<br>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText33","TEXT","&nbsp;");
+amo.registerAttribute("frameText33","TEXT","<div class='AlticeRegular' style='top:175px;left:22px;font-size:10px;line-height:1.15;'>Speeds and availability<br>vary by area.</div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -228,7 +228,7 @@ amo.registerAttribute("frameText33","TEXT","&nbsp;");
         },
         beforeLoad: function(data){
           data.map(function(content){
-            
+
           });
           return data;
         }
