--- a/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x600/300x600_frame3.html
+++ b/A/Altice/Altice_July2020/ads/SDL_B2U_GIG_20_OMG/300x600/300x600_frame3.html
@@ -121,7 +121,7 @@ amo.registerAttribute("frameText22", "TEXT", "<div style='top:146px;left:23px;'>
 amo.registerAttribute("frameText23", "TEXT", "<div style='top: 198px;left: 23px;'><div class='bulletedText'>Free Installation for Students</div><div class='bulletedText'>Free WIFI extender</div></div>");
 amo.registerAttribute("frameText31","TEXT","<div style='top: 50px;left: 23px;font-size: 31px;line-height: 1.05;'>Internet<br>as low as</div>");
 amo.registerAttribute("frameText32","TEXT","<div style='top: 113px;left: 20px;width: 240px;line-height: 1;'><font style='font-size: 102px;letter-spacing: -1.2px;' class='coloredText'>$20</font><font style='margin-left: 5px;font-size: 17px;display: inline-block;vertical-align: 59px;'>/mo.</font><div class='AlticeRegular' style='margin: 0px 0 0 3px;font-size: 12.3px;line-height: 1.1;'>w/Auto Pay & Paperless Bill<br>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText33","TEXT","&nbsp;");
+amo.registerAttribute("frameText33","TEXT","<div class='AlticeRegular' style='top: 265px;left: 23px;font-size: 13px;line-height: 1.1;'>Speeds and availability<br>vary by area.</div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
